# VishnuLex

./: .gitignore  .gitlab-ci.yml  .gitsubprojects  .jambs_configs.sh  CMakeLists.txt  LICENSE.txt  README.md
CMake/: FindZeroMQ.cmake
examples/: CMakeLists.txt  publisher.cpp  subscriber.cpp
vishnulex/: CMakeLists.txt  ChangeColorGroup.fbs  ChangeNameGroup.fbs  DestroyGroup.fbs  SyncGroup.fbs  SyncNeeded.fbs  SyncTransferFunc.fbs  SyncXml.fbs
